# lumbarSpineDiagonostic

./: LICENSE  NOTICE.md  Untitled.ipynb  main.py  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
src/: extract_data.py
