[project]
name = "lumbarspinediagonostic"
version = "0.1.0"
description = "Local AI diagnostic pipeline for lumbar spine MRI analysis"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "PolyForm-Noncommercial-1.0.0" }
license-files = ["LICENSE"]
classifiers = [
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=2.5.1",
    "opencv-python>=5.0.0.93",
    "pandas>=3.0.3",
    "pydicom>=3.0.2",
]
